Начало верстки страницы записей

--- a/helper/less/note.less
+++ b/helper/less/note.less
@@ -3,3 +3,5 @@
 @import 'less/header.less';
 @import 'less/main.less';
 @import 'less/forms.less';
+@import 'less/nav_list.less';
+@import 'less/breadcrumbs.less';
