--- a/src/Acme/MainBundle/Resources/views/Notes/index.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Notes/index.html.twig
@@ -4,11 +4,12 @@
 	{% include 'AcmeMainBundle:Default:header.html.twig' %}
 
 	<div id="main">
-		<div class="breadcrumbs"></div>
-		<div class="left">
-			<div class="wrapper js-nav-list"></div>
-		</div><div class="right">
-			<div class="wrapper js-note"></div>
+		<div class="wrapper">
+			<div class="js-breadcrumbs"></div>
+			<div class="left js-nav-list"></div>
+			<div class="right">
+				<div class="js-note"></div>
+			</div>
 		</div>
 	</div>
 	<div id="templates">
