--- a/src/Acme/MainBundle/Resources/views/Underscore/navlist.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/navlist.html.twig
@@ -1,6 +1,6 @@
 {%raw%}
 	<script type="text/template" id="nav_list">
-		<ul class="js-sortable">
+		<ul class="nav-list js-sortable">
 			<%_.each(elements, function(element){%>
 				
 				<li class="<%=element.type%>" data-id="<%=element.id%>">
