--- a/helper/less/main.less
+++ b/helper/less/main.less
@@ -5,81 +5,31 @@ body {
 
 #main {
 	width: 100%;
+	padding-bottom: 80px;
 
-	.breadcrumbs {
-		width: 100%;
-	}
+	.wrapper {
+		font-size: 0;
+		min-height: 100%;
+		background-color: white;
+		margin: 10px;
+		padding: 10px 0;
 
-	.left {
-		width: 25%;
+		.left {
+			width: 25%;
+			font-size: 10pt;
+			.inline-block;
+		}
 
-		ul {
-			li {
-				height: 40px;
-				border-top: 1px solid #CFD0D2;
-				cursor: pointer;
-				position: relative;
-				list-style: none;
-				background: url("../img/row_bg.png") 0 0 repeat;
+		.right {
+			width: 75%;
+			font-size: 10pt;
+			vertical-align: top;
+
+			.inline-block;
+
+			.note-content {
 				
-				.box-sizing(border-box);
-				.box-shadow(inset 0 1px 1px white);
-
-				.drag {
-					position: absolute;
-					width: 30px;
-					height: 100%;
-					background-image: url(../img/drag.png);
-					background-position: 10px 11px;
-					background-repeat: no-repeat;
-					cursor: move;
-					
-					.box-sizing(border-box);
-				}
-
-				a {
-					color: black;
-					text-decoration: none;
-				}
-
-				.row_title {
-					font-size: 10pt;
-					padding: 12px 0 0 40px;
-				}
-
-				&.dir {
-					.row_title {
-						font-weight: bold;
-					}
-				}
-
-				&:last-child {
-					border-bottom: 1px solid #CFD0D2;
-				}
 			}
 		}
-
-		.inline-block;
-
-		.wrapper {
-
-			.mix-wrapper;
-		}
 	}
-
-	.right {
-		width: 75%;
-		vertical-align: top;
-
-		.inline-block;
-	}
-}
-
-.mix-wrapper {
-	margin: 10px;
-	background-color: white;
-	border: 1px solid black;
-	padding: 10px 0;
-
-	.border-radius(10px);
 }
