--- a/web/css/note.css
+++ b/web/css/note.css
@@ -258,12 +258,18 @@ body {
 }
 #main {
   width: 100%;
+  padding-bottom: 80px;
 }
-#main .breadcrumbs {
-  width: 100%;
+#main .wrapper {
+  font-size: 0;
+  min-height: 100%;
+  background-color: white;
+  margin: 10px;
+  padding: 10px 0;
 }
-#main .left {
+#main .wrapper .left {
   width: 25%;
+  font-size: 10pt;
   display: -moz-inline-stack;
   /* FF2- */
 
@@ -275,57 +281,9 @@ body {
   /* IE6-7 hasLayout */
 
 }
-#main .left ul li {
-  height: 40px;
-  border-top: 1px solid #CFD0D2;
-  cursor: pointer;
-  position: relative;
-  list-style: none;
-  background: url("../img/row_bg.png") 0 0 repeat;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: inset 0 1px 1px #ffffff;
-  -moz-box-shadow: inset 0 1px 1px #ffffff;
-  box-shadow: inset 0 1px 1px #ffffff;
-}
-#main .left ul li .drag {
-  position: absolute;
-  width: 30px;
-  height: 100%;
-  background-image: url(../img/drag.png);
-  background-position: 10px 11px;
-  background-repeat: no-repeat;
-  cursor: move;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-#main .left ul li a {
-  color: black;
-  text-decoration: none;
-}
-#main .left ul li .row_title {
-  font-size: 10pt;
-  padding: 12px 0 0 40px;
-}
-#main .left ul li.dir .row_title {
-  font-weight: bold;
-}
-#main .left ul li:last-child {
-  border-bottom: 1px solid #CFD0D2;
-}
-#main .left .wrapper {
-  margin: 10px;
-  background-color: white;
-  border: 1px solid black;
-  padding: 10px 0;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-}
-#main .right {
+#main .wrapper .right {
   width: 75%;
+  font-size: 10pt;
   vertical-align: top;
   display: -moz-inline-stack;
   /* FF2- */
@@ -337,15 +295,6 @@ body {
   *zoom: 1;
   /* IE6-7 hasLayout */
 
-}
-.mix-wrapper {
-  margin: 10px;
-  background-color: white;
-  border: 1px solid black;
-  padding: 10px 0;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
 }
 .dark_form {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -566,4 +515,88 @@ body {
   width: 25px;
   height: 19px;
   background: url("/img/arrow2.png") 0 0 no-repeat;
+}
+.nav-list {
+  margin-left: 10px;
+  background-color: white;
+}
+.nav-list .dir,
+.nav-list .note,
+.nav-list .ui-state-highlight {
+  height: 40px;
+  border-bottom: 1px solid #cfd0d2;
+  cursor: pointer;
+  position: relative;
+  list-style: none;
+  background: url("../img/row_bg.png") 0 0 repeat;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: inset 0 1px 1px #ffffff;
+  -moz-box-shadow: inset 0 1px 1px #ffffff;
+  box-shadow: inset 0 1px 1px #ffffff;
+}
+.nav-list .dir .drag,
+.nav-list .note .drag,
+.nav-list .ui-state-highlight .drag {
+  position: absolute;
+  width: 30px;
+  height: 100%;
+  background-image: url(../img/drag.png);
+  background-position: 10px 11px;
+  background-repeat: no-repeat;
+  cursor: move;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.nav-list .dir a,
+.nav-list .note a,
+.nav-list .ui-state-highlight a {
+  color: black;
+  text-decoration: none;
+}
+.nav-list .dir .row_title,
+.nav-list .note .row_title,
+.nav-list .ui-state-highlight .row_title {
+  font-size: 10pt;
+  padding: 12px 0 0 40px;
+}
+.nav-list .dir .row_title {
+  font-weight: bold;
+}
+.breadcrumbs {
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 0 15px;
+  border-top: 1px solid #f4f4f4;
+  border-bottom: 1px solid #cfd0d2;
+  background-image: linear-gradient(bottom, #ededed 25%, #f4f4f4 63%);
+  background-image: -o-linear-gradient(bottom, #ededed 25%, #f4f4f4 63%);
+  background-image: -moz-linear-gradient(bottom, #ededed 25%, #f4f4f4 63%);
+  background-image: -webkit-linear-gradient(bottom, #ededed 25%, #f4f4f4 63%);
+  background-image: -ms-linear-gradient(bottom, #ededed 25%, #f4f4f4 63%);
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.25, #ededed), color-stop(0.63, #f4f4f4));
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-shadow: inset 0 1px #ffffff;
+  -moz-box-shadow: inset 0 1px #ffffff;
+  -webkit-box-shadow: inset 0 1px #ffffff;
+}
+.breadcrumbs li {
+  display: inline-block;
+  font-size: 10pt;
+  color: #333;
+  padding: 5px 0;
+}
+.breadcrumbs li a {
+  text-decoration: none;
+  color: #0e90d2;
+}
+.breadcrumbs li a:hover {
+  text-decoration: underline;
+}
+.breadcrumbs li .divider {
+  padding: 0 5px;
 }
