Иконки для панели

--- a/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
@@ -2,26 +2,13 @@
 	<script type="text/template" id="cpanel">		
 		<div class="control-panel">
 			<ul class="controls">
-				<li>
-					<ul class="control-group">
-						<li><a href="#">Добавить раздел</a></li>
-						<li><a href="#">Добавить запись</a></li>
-					</ul>
-				</li>
-				<li>
-					<ul class="control-group">
-						<li><a href="#">Изменить заголовок</a></li>
-						<li><a href="#">Изменить запись</a></li>
-					</ul>
-				</li>
-				<li>
-					<ul class="control-group">
-						<li><a href="#">Копировать</a></li>
-						<li><a href="#">Вырезать</a></li>
-						<li><a href="#">Вставить</a></li>
-						<li><a href="#">Удалить</a></li>
-					</ul>
-				</li>
+				<li><div class="wrap"><a class="cp-add-dir" href="#" title="Добавить раздел"></a></div></li>
+				<li><div class="wrap"><a class="cp-add-note" href="#" title="Добавить запись"></a></div></li>
+				<li><div class="wrap"><a class="cp-edit" href="#" title="Изменить"></a></div></li>
+				<li><div class="wrap"><a class="cp-copy" href="#" title="Копировать"></a></div></li>
+				<li><div class="wrap"><a class="cp-cut" href="#" title="Вырезать"></a></div></li>
+				<li><div class="wrap"><a class="cp-paste" href="#" title="Вставить"></a></div></li>
+				<li><div class="wrap"><a class="cp-delete" href="#" title="Удалить"></a></div></li>
 			</ul>
 		</div>
 	</script>
