--- a/helper/less/control_panel.less
+++ b/helper/less/control_panel.less
@@ -1,29 +1,90 @@
 .control-panel {
+	height: 60px;
 	font-size: 10pt;
-	margin: 0 10pt 10pt 10pt;
+	margin: 0 10px;
+
+	background: -webkit-linear-gradient(top, #f4f4f4 0%,#f3f3f3 50%,#efefef 51%,#eeeeee 100%);
+
+	.mix-gradient;
 
 	.controls {
+		font-size: 0;
+		background: url(../img/bg_control_panel.png);
+		border-left: 1px solid #e1e1e1;
+		border-top: 1px solid white;
+
 		li {
+			border-right: 1px solid #e1e1e1;
+			border-left: 1px solid white;
+
+			.mix-gradient;
+
+			&:hover {
+				.mix-gradient(#eeeeee, #efefef, #f3f3f3, #f4f4f4);
+			}
+
+			&:active {
+				.mix-gradient(#eaeaea, #e9e9e9, #e6e6e6, #e5e5e5);
+			}
+
+			&:last-child {
+				box-shadow: 1px 0 0 0 white;
+				-moz-box-shadow: 1px 0 0 0 white;
+				-webkit-box-shadow: 1px 0 0 0 white;
+			}
+
 			.inline-block;
 
-			a {
-				text-decoration: none;
-				color: black;
+			.wrap {
+				background: url(../img/bg_control_panel.png);
 
-				&:hover {
-					text-decoration: underline;
+				a {	
+					width: 80px;
+					height: 60px;
+					text-decoration: none;
+					color: black;
+
+					.inline-block;
+
+					&.cp-add-dir {
+						background: url(../img/icon_add_dir.png) no-repeat;
+						background-position: 16px 11px;
+					}
+					&.cp-add-note {
+						background: url(../img/icon_add_note.png) no-repeat;
+						background-position: 17px 17px;
+					}
+					&.cp-edit {
+						background: url(../img/icon_edit.png) no-repeat;
+						background-position: 17px 17px;
+					}
+					&.cp-copy {
+						background: url(../img/icon_copy.png) no-repeat;
+						background-position: 25px 16px;
+					}
+					&.cp-cut {
+						background: url(../img/icon_cut.png) no-repeat;
+						background-position: 23px 20px;
+					}
+					&.cp-paste {
+						background: url(../img/icon_paste.png) no-repeat;
+						background-position: 26px 14px;
+					}
+					&.cp-delete {
+						background: url(../img/icon_trash.png) no-repeat;
+						background-position: 27px 17px;
+					}
 				}
 			}
-
-			.control-group {
-				border-right: 1px solid black;
-				padding: 0 10px;
-			}
-
 		}
 	}
+}
 
-	&:first-child {
-		border-left: 1px solid black;
-	}
+.mix-gradient(@a: #f4f4f4, @b: #f3f3f3, @c: #efefef, @d: #eeeeee) {
+	background: @a;
+    background: -moz-linear-gradient(top, @a 0%, @b 50%, @c 51%, @d 100%);
+    background: -webkit-linear-gradient(top, @a 0%, @b 50%, @c 51%, @d 100%);
+    background: -o-linear-gradient(top, @a 0%, @b 50%, @c 51%, @d 100%);
+    background: -ms-linear-gradient(top, @a 0%, @b 50%, @c 51%, @d 100%);
+    background: linear-gradient(top, @a 0%, @b 50%, @c 51%, @d 100%);
 }
