--- a/helper/less/main.less
+++ b/helper/less/main.less
@@ -12,7 +12,7 @@ body {
 		min-height: 100%;
 		background-color: white;
 		margin: 10px;
-		padding: 10px 0;
+		padding: 0 0 10px 0;
 
 		.left {
 			width: 25%;
