--- a/web/css/note.css
+++ b/web/css/note.css
@@ -265,7 +265,7 @@ body {
   min-height: 100%;
   background-color: white;
   margin: 10px;
-  padding: 10px 0;
+  padding: 0 0 10px 0;
 }
 #main .wrapper .left {
   width: 25%;
@@ -601,10 +601,31 @@ body {
   padding: 0 5px;
 }
 .control-panel {
+  height: 60px;
   font-size: 10pt;
-  margin: 0 10pt 10pt 10pt;
+  margin: 0 10px;
+  background: #f4f4f4;
+  background: -moz-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: -webkit-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: -o-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: -ms-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+}
+.control-panel .controls {
+  font-size: 0;
+  background: url(../img/bg_control_panel.png);
+  border-left: 1px solid #e1e1e1;
+  border-top: 1px solid white;
 }
 .control-panel .controls li {
+  border-right: 1px solid #e1e1e1;
+  border-left: 1px solid white;
+  background: #f4f4f4;
+  background: -moz-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: -webkit-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: -o-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: -ms-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
+  background: linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
   display: -moz-inline-stack;
   /* FF2- */
 
@@ -616,17 +637,71 @@ body {
   /* IE6-7 hasLayout */
 
 }
-.control-panel .controls li a {
+.control-panel .controls li:hover {
+  background: #eeeeee;
+  background: -moz-linear-gradient(top, #eeeeee 0%, #efefef 50%, #f3f3f3 51%, #f4f4f4 100%);
+  background: -webkit-linear-gradient(top, #eeeeee 0%, #efefef 50%, #f3f3f3 51%, #f4f4f4 100%);
+  background: -o-linear-gradient(top, #eeeeee 0%, #efefef 50%, #f3f3f3 51%, #f4f4f4 100%);
+  background: -ms-linear-gradient(top, #eeeeee 0%, #efefef 50%, #f3f3f3 51%, #f4f4f4 100%);
+  background: linear-gradient(top, #eeeeee 0%, #efefef 50%, #f3f3f3 51%, #f4f4f4 100%);
+}
+.control-panel .controls li:active {
+  background: #eaeaea;
+  background: -moz-linear-gradient(top, #eaeaea 0%, #e9e9e9 50%, #e6e6e6 51%, #e5e5e5 100%);
+  background: -webkit-linear-gradient(top, #eaeaea 0%, #e9e9e9 50%, #e6e6e6 51%, #e5e5e5 100%);
+  background: -o-linear-gradient(top, #eaeaea 0%, #e9e9e9 50%, #e6e6e6 51%, #e5e5e5 100%);
+  background: -ms-linear-gradient(top, #eaeaea 0%, #e9e9e9 50%, #e6e6e6 51%, #e5e5e5 100%);
+  background: linear-gradient(top, #eaeaea 0%, #e9e9e9 50%, #e6e6e6 51%, #e5e5e5 100%);
+}
+.control-panel .controls li:last-child {
+  box-shadow: 1px 0 0 0 white;
+  -moz-box-shadow: 1px 0 0 0 white;
+  -webkit-box-shadow: 1px 0 0 0 white;
+}
+.control-panel .controls li .wrap {
+  background: url(../img/bg_control_panel.png);
+}
+.control-panel .controls li .wrap a {
+  width: 80px;
+  height: 60px;
   text-decoration: none;
   color: black;
+  display: -moz-inline-stack;
+  /* FF2- */
+
+  display: inline-block;
+  *display: inline;
+  /* IE6-7 inline-block hack */
+
+  *zoom: 1;
+  /* IE6-7 hasLayout */
+
 }
-.control-panel .controls li a:hover {
-  text-decoration: underline;
+.control-panel .controls li .wrap a.cp-add-dir {
+  background: url(../img/icon_add_dir.png) no-repeat;
+  background-position: 16px 11px;
 }
-.control-panel .controls li .control-group {
-  border-right: 1px solid black;
-  padding: 0 10px;
+.control-panel .controls li .wrap a.cp-add-note {
+  background: url(../img/icon_add_note.png) no-repeat;
+  background-position: 17px 17px;
 }
-.control-panel:first-child {
-  border-left: 1px solid black;
+.control-panel .controls li .wrap a.cp-edit {
+  background: url(../img/icon_edit.png) no-repeat;
+  background-position: 17px 17px;
+}
+.control-panel .controls li .wrap a.cp-copy {
+  background: url(../img/icon_copy.png) no-repeat;
+  background-position: 25px 16px;
+}
+.control-panel .controls li .wrap a.cp-cut {
+  background: url(../img/icon_cut.png) no-repeat;
+  background-position: 23px 20px;
+}
+.control-panel .controls li .wrap a.cp-paste {
+  background: url(../img/icon_paste.png) no-repeat;
+  background-position: 26px 14px;
+}
+.control-panel .controls li .wrap a.cp-delete {
+  background: url(../img/icon_trash.png) no-repeat;
+  background-position: 27px 17px;
 }
