--- a/helper/less/nav_list.less
+++ b/helper/less/nav_list.less
@@ -1,44 +1,103 @@
 .nav-list {
-	margin-left: 10px;
 	background-color: white;
 	
 	.dir, .note, .ui-state-highlight {
 		height: 40px;
-		border-bottom: 1px solid #cfd0d2;
-		cursor: pointer;
 		position: relative;
 		list-style: none;
-		background: url("../img/row_bg.png") 0 0 repeat;
+		border: 1px solid #cfd0d2;
+		border-top: 1px solid #e5e5e5;
 		
-		.box-sizing(border-box);
-		.box-shadow(inset 0 1px 1px white);
+		#gradient .vertical(#ededed, #f9f9f9);
+		.box-shadow(inset 0 1px 0 white);
 
-		.drag {
-			position: absolute;
-			width: 30px;
+		&:hover {
+			#gradient .vertical(#f5f5f5, #fcfcfc);
+		}
+
+		.tmb {
+			width: 40px;
 			height: 100%;
-			background-image: url(../img/drag.png);
-			background-position: 10px 11px;
-			background-repeat: no-repeat;
-			cursor: move;
+			position: absolute;
+			top: 0;
+			border-left: 1px solid white;
+			border-top: 1px solid white;
+			border-right: 1px solid #cfd0d2;
 			
 			.box-sizing(border-box);
+			#gradient .vertical(#eaeaea, #dfdede);
+			/*.box-shadow(inset 0 1px 0 white);*/
+
+			&.drag {
+				cursor: move;
+				left: 0;
+
+				.thumb {
+					background-image: url(../img/drag.png);
+					background-repeat: no-repeat;
+					background-position: 11px 11px;
+					width: 100%;
+					height: 100%;
+				}
+			}
+			&.ico {
+				left: 40px;
+
+				.box-shadow(1px 0 0 white);
+
+				.thumb {
+					background-repeat: no-repeat;
+					width: 100%;
+					height: 100%;
+				}
+			}
+		}
+
+		.check-box {
+			width: 26px;
+			height: 26px;
+			position: absolute;
+			top: 8px;
+			right: 7px;
+			background-image: url(../img/checkbox.png);
+
+			&:hover {
+				background-position: 0 -26px;
+			}
+
+			&:active {
+				background-position: 0 -52px;
+			}
 		}
 
 		a {
-			color: black;
+			margin: 0 40px 0 72px;
+			padding-left: 20px;
+			vertical-align: top;
+			color: #476e7d;
+			font-weight: bold;
 			text-decoration: none;
-		}
-
-		.row_title {
-			font-size: 10pt;
-			padding: 12px 0 0 40px;
+			height: 100%;
+			display: block;
+			line-height: 3.2;
+			text-shadow: 0 1px 0 white;
+			overflow: hidden;
+			white-space: nowrap;
 		}
 	}
 
 	.dir {
-		.row_title {
-			font-weight: bold;
+		.thumb {
+			background-image: url(../img/mini_dir.png);
+			background-position: 8px 11px;
 		}
 	}
+
+	.note {
+		.thumb {
+			background-image: url(../img/mini_note.png);
+			background-position: 8px 11px;
+		}
+	}
+
 }
