--- a/web/css/note.css
+++ b/web/css/note.css
@@ -265,7 +265,6 @@ body {
   min-height: 100%;
   background-color: white;
   margin: 10px;
-  padding: 0 0 10px 0;
 }
 #main .wrapper .left {
   width: 25%;
@@ -517,57 +516,139 @@ body {
   background: url("/img/arrow2.png") 0 0 no-repeat;
 }
 .nav-list {
-  margin-left: 10px;
   background-color: white;
 }
 .nav-list .dir,
 .nav-list .note,
 .nav-list .ui-state-highlight {
   height: 40px;
-  border-bottom: 1px solid #cfd0d2;
-  cursor: pointer;
   position: relative;
   list-style: none;
-  background: url("../img/row_bg.png") 0 0 repeat;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: inset 0 1px 1px #ffffff;
-  -moz-box-shadow: inset 0 1px 1px #ffffff;
-  box-shadow: inset 0 1px 1px #ffffff;
+  border: 1px solid #cfd0d2;
+  border-top: 1px solid #e5e5e5;
+  background-color: #f2f2f2;
+  background-image: -moz-linear-gradient(top, #ededed, #f9f9f9);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ededed), to(#f9f9f9));
+  background-image: -webkit-linear-gradient(top, #ededed, #f9f9f9);
+  background-image: -o-linear-gradient(top, #ededed, #f9f9f9);
+  background-image: linear-gradient(to bottom, #ededed, #f9f9f9);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffededed', endColorstr='#fff9f9f9', GradientType=0);
+  -webkit-box-shadow: inset 0 1px 0 #ffffff;
+  -moz-box-shadow: inset 0 1px 0 #ffffff;
+  box-shadow: inset 0 1px 0 #ffffff;
 }
-.nav-list .dir .drag,
-.nav-list .note .drag,
-.nav-list .ui-state-highlight .drag {
-  position: absolute;
-  width: 30px;
+.nav-list .dir:hover,
+.nav-list .note:hover,
+.nav-list .ui-state-highlight:hover {
+  background-color: #f8f8f8;
+  background-image: -moz-linear-gradient(top, #f5f5f5, #fcfcfc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#fcfcfc));
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #fcfcfc);
+  background-image: -o-linear-gradient(top, #f5f5f5, #fcfcfc);
+  background-image: linear-gradient(to bottom, #f5f5f5, #fcfcfc);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fffcfcfc', GradientType=0);
+}
+.nav-list .dir .tmb,
+.nav-list .note .tmb,
+.nav-list .ui-state-highlight .tmb {
+  width: 40px;
   height: 100%;
-  background-image: url(../img/drag.png);
-  background-position: 10px 11px;
-  background-repeat: no-repeat;
-  cursor: move;
+  position: absolute;
+  top: 0;
+  border-left: 1px solid white;
+  border-top: 1px solid white;
+  border-right: 1px solid #cfd0d2;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  background-color: #e6e5e5;
+  background-image: -moz-linear-gradient(top, #eaeaea, #dfdede);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eaeaea), to(#dfdede));
+  background-image: -webkit-linear-gradient(top, #eaeaea, #dfdede);
+  background-image: -o-linear-gradient(top, #eaeaea, #dfdede);
+  background-image: linear-gradient(to bottom, #eaeaea, #dfdede);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeaeaea', endColorstr='#ffdfdede', GradientType=0);
+  /*.box-shadow(inset 0 1px 0 white);*/
+
+}
+.nav-list .dir .tmb.drag,
+.nav-list .note .tmb.drag,
+.nav-list .ui-state-highlight .tmb.drag {
+  cursor: move;
+  left: 0;
+}
+.nav-list .dir .tmb.drag .thumb,
+.nav-list .note .tmb.drag .thumb,
+.nav-list .ui-state-highlight .tmb.drag .thumb {
+  background-image: url(../img/drag.png);
+  background-repeat: no-repeat;
+  background-position: 11px 11px;
+  width: 100%;
+  height: 100%;
+}
+.nav-list .dir .tmb.ico,
+.nav-list .note .tmb.ico,
+.nav-list .ui-state-highlight .tmb.ico {
+  left: 40px;
+  -webkit-box-shadow: 1px 0 0 #ffffff;
+  -moz-box-shadow: 1px 0 0 #ffffff;
+  box-shadow: 1px 0 0 #ffffff;
+}
+.nav-list .dir .tmb.ico .thumb,
+.nav-list .note .tmb.ico .thumb,
+.nav-list .ui-state-highlight .tmb.ico .thumb {
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+.nav-list .dir .check-box,
+.nav-list .note .check-box,
+.nav-list .ui-state-highlight .check-box {
+  width: 26px;
+  height: 26px;
+  position: absolute;
+  top: 8px;
+  right: 7px;
+  background-image: url(../img/checkbox.png);
+}
+.nav-list .dir .check-box:hover,
+.nav-list .note .check-box:hover,
+.nav-list .ui-state-highlight .check-box:hover {
+  background-position: 0 -26px;
+}
+.nav-list .dir .check-box:active,
+.nav-list .note .check-box:active,
+.nav-list .ui-state-highlight .check-box:active {
+  background-position: 0 -52px;
 }
 .nav-list .dir a,
 .nav-list .note a,
 .nav-list .ui-state-highlight a {
-  color: black;
-  text-decoration: none;
-}
-.nav-list .dir .row_title,
-.nav-list .note .row_title,
-.nav-list .ui-state-highlight .row_title {
-  font-size: 10pt;
-  padding: 12px 0 0 40px;
-}
-.nav-list .dir .row_title {
+  margin: 0 40px 0 72px;
+  padding-left: 20px;
+  vertical-align: top;
+  color: #476e7d;
   font-weight: bold;
+  text-decoration: none;
+  height: 100%;
+  display: block;
+  line-height: 3.2;
+  text-shadow: 0 1px 0 white;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.nav-list .dir .thumb {
+  background-image: url(../img/mini_dir.png);
+  background-position: 8px 11px;
+}
+.nav-list .note .thumb {
+  background-image: url(../img/mini_note.png);
+  background-position: 8px 11px;
 }
 .breadcrumbs {
-  margin-right: 10px;
-  margin-left: 10px;
   padding: 0 15px;
   border-top: 1px solid #f4f4f4;
   border-bottom: 1px solid #cfd0d2;
@@ -603,7 +684,6 @@ body {
 .control-panel {
   height: 60px;
   font-size: 10pt;
-  margin: 0 10px;
   background: #f4f4f4;
   background: -moz-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
   background: -webkit-linear-gradient(top, #f4f4f4 0%, #f3f3f3 50%, #efefef 51%, #eeeeee 100%);
