--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
+            <link href="{{ asset('/libs/bootstrap/css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
             <link href="{{ asset('/css/note.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -11,8 +12,11 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script src="/js/libs/jquery_min.js"></script>
+            <script src="/js/libs/jquery-2.0.2.min.js"></script>
             <script src="/js/libs/jquery-ui-1.10.2.custom.min.js"></script>
+            <script src="/js/libs/jquery.hotkeys.js"></script>
+            <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+            <script src="/js/libs/bootstrap-wysiwyg.js"></script>
             <script src="/js/libs/underscore.js"></script>
             <script src="/js/libs/json2.js"></script>
             <script src="/js/libs/backbone.js"></script>
