Изменение структуры базы

--- a/src/Acme/MainBundle/Resources/views/Underscore/navlist.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/navlist.html.twig
@@ -13,7 +13,7 @@
 					<%}%>
 						<%=element.title%>
 					</a>
-					<div class="check-box"></a>				
+					<div class="check-box<%if(element.selected){%> active<%}%>"></a>				
 				</li>
 
 			<%}); %>
