--- a/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
@@ -4,15 +4,15 @@
 			<ul class="controls">
 				<li>
 					<div class="wrap">
-						<a class="cp-add-dir" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_dir" title="Добавить раздел"></a>
+						<a class="cp-add-dir js-route" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_dir" title="Добавить раздел"></a>
 					</div>
 				</li>
 				<li>
 					<div class="wrap">
-						<a class="cp-add-note" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_note" title="Добавить запись"></a>
+						<a class="cp-add-note js-route" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_note" title="Добавить запись"></a>
 					</div>
 				</li>
-				<li><div class="wrap"><a class="cp-edit" href="#" title="Изменить"></a></div></li>
+				<li><div class="wrap"><a class="cp-edit js-route" href="#" title="Изменить"></a></div></li>
 				<li><div class="wrap"><a class="cp-copy" href="#" title="Копировать"></a></div></li>
 				<li><div class="wrap"><a class="cp-cut" href="#" title="Вырезать"></a></div></li>
 				<li><div class="wrap"><a class="cp-paste" href="#" title="Вставить"></a></div></li>
