Попап окно и дизайн записи

--- a/helper/less/main.less
+++ b/helper/less/main.less
@@ -9,18 +9,21 @@ body {
 
 	.wrapper {
 		font-size: 0;
-		min-height: 100%;
+		min-height: 900px;
+		min-width: 1000px;
 		background-color: #f4f4f4;
 		margin: 10px;
 
 		.left {
 			width: 25%;
+			min-width: 250px;
 			font-size: 10pt;
 			.inline-block;
 		}
 
 		.right {
 			width: 75%;
+			min-width: 750px;
 			font-size: 10pt;
 			vertical-align: top;
 
