--- a/helper/less/note.less
+++ b/helper/less/note.less
@@ -8,3 +8,5 @@
 @import 'less/control_panel.less';
 @import 'less/editor.less';
 @import 'less/buttons.less';
+@import 'less/note-content.less';
+@import 'less/popup.less';
