--- a/src/Acme/MainBundle/Resources/views/Underscore/note.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/note.html.twig
@@ -1,6 +1,9 @@
 {%raw%}
 	<script type="text/template" id="note">
-		<h2><%=note.title%></h2>
-		<div><%=note.content%></div>
+		<div class="note-title">
+			<p><%=note.title%></p>
+			<div></div>
+		</div>
+		<div class="note-content"><%=note.content%></div>
 	</script>
 {%endraw%}
