--- a/web/css/note.css
+++ b/web/css/note.css
@@ -265,12 +265,14 @@ body {
 }
 #main .wrapper {
   font-size: 0;
-  min-height: 100%;
+  min-height: 900px;
+  min-width: 1000px;
   background-color: #f4f4f4;
   margin: 10px;
 }
 #main .wrapper .left {
   width: 25%;
+  min-width: 250px;
   font-size: 10pt;
   display: -moz-inline-stack;
   /* FF2- */
@@ -285,6 +287,7 @@ body {
 }
 #main .wrapper .right {
   width: 75%;
+  min-width: 750px;
   font-size: 10pt;
   vertical-align: top;
   display: -moz-inline-stack;
@@ -898,4 +901,126 @@ body {
   background-image: linear-gradient(to bottom, #e5412f, #e97270);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe5412f', endColorstr='#ffe97270', GradientType=0);
+}
+.note .note-title {
+  margin-top: 7px;
+  position: relative;
+  background-image: url(../img/dir_fon_left.png);
+  background-repeat: no-repeat;
+  padding-left: 61px;
+  padding-right: 61px;
+  max-width: 100%;
+  background-position: 23px 0;
+  box-sizing: border-box;
+  display: -moz-inline-stack;
+  /* FF2- */
+
+  display: inline-block;
+  *display: inline;
+  /* IE6-7 inline-block hack */
+
+  *zoom: 1;
+  /* IE6-7 hasLayout */
+
+}
+.note .note-title p {
+  height: 30px;
+  font-size: 16pt;
+  color: #2c3f08;
+  text-shadow: 1px 1px #ddf4be;
+  padding-top: 6px;
+  vertical-align: top;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
+  background-image: url(../img/dir_fon_center.png);
+  display: -moz-inline-stack;
+  /* FF2- */
+
+  display: inline-block;
+  *display: inline;
+  /* IE6-7 inline-block hack */
+
+  *zoom: 1;
+  /* IE6-7 hasLayout */
+
+}
+.note .note-title div {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 61px;
+  height: 36px;
+  background-image: url(../img/dir_fon_right.png);
+  background-repeat: no-repeat;
+}
+.note .note-content {
+  margin: -29px 10px 10px 10px;
+  padding: 60px 10px 10px 35px;
+  background-color: white;
+  min-height: 750px;
+  font-size: 12pt;
+  -webkit-box-shadow: 0 0px 8px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.15);
+}
+.note .note-content strong {
+  font-weight: bold;
+}
+.note .note-content em {
+  font-style: italic;
+}
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 10000;
+}
+.popup .btn {
+  width: 150px;
+}
+.popup .btn.cancel {
+  margin-right: 10px;
+}
+.popup .popup-wrap {
+  width: 380px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-left: -190px;
+  margin-top: -100px;
+  background-color: rgba(0, 0, 0, 0.7);
+  text-align: center;
+}
+.popup .popup-wrap .popup-header {
+  padding: 20px;
+  border-bottom: 1px solid white;
+  background-color: #f3f3f3;
+  background-image: -moz-linear-gradient(top, #f9f9f9, #eaeaea);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f9f9f9), to(#eaeaea));
+  background-image: -webkit-linear-gradient(top, #f9f9f9, #eaeaea);
+  background-image: -o-linear-gradient(top, #f9f9f9, #eaeaea);
+  background-image: linear-gradient(to bottom, #f9f9f9, #eaeaea);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffeaeaea', GradientType=0);
+}
+.popup .popup-wrap .popup-content {
+  background-color: #fcfcfc;
+  padding: 25px;
+  border-top: 1px solid #bababa;
+  -webkit-box-shadow: inset 0 1px 2px #efefef;
+  -moz-box-shadow: inset 0 1px 2px #efefef;
+  box-shadow: inset 0 1px 2px #efefef;
+}
+.popup .popup-wrap .popup-content p {
+  line-height: 1.5;
+  font-size: 11pt;
+  color: #535353;
+}
+.popup .popup-wrap .popup-buttons {
+  background-color: #fcfcfc;
+  padding: 0 25px 25px 25px;
 }
