--- a/src/Acme/MainBundle/Resources/views/Notes/index.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Notes/index.html.twig
@@ -29,12 +29,12 @@
 
 	<script src="/js/libs/tinymce/tiny_mce.js"></script>
 	<script src="/js/app_note.js"></script>
+	<script src="/js/NoteRouter.js"></script>
 	<script src="/js/models/NavListItem.js"></script>
 	<script src="/js/models/Dir.js"></script>
 	<script src="/js/models/Note.js"></script>
 	<script src="/js/models/Breadcrumbs.js"></script>
 	<script src="/js/models/ControlPanel.js"></script>
-	<script src="/js/models/Editor.js"></script>
 	<script src="/js/models/Popup.js"></script>
 	<script src="/js/views/NavListView.js"></script>
 	<script src="/js/views/NoteView.js"></script>
