копирование/вставка разделов и записей

--- a/src/Acme/MainBundle/Resources/views/Notes/index.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Notes/index.html.twig
@@ -36,6 +36,7 @@
 	<script src="/js/models/Breadcrumbs.js"></script>
 	<script src="/js/models/ControlPanel.js"></script>
 	<script src="/js/models/Popup.js"></script>
+	<script src="/js/models/CopyPaste.js"></script>
 	<script src="/js/views/NavListView.js"></script>
 	<script src="/js/views/NoteView.js"></script>
 	<script src="/js/views/BreadcrumbsView.js"></script>
