--- a/src/Acme/MainBundle/Resources/views/Underscore/popup.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/popup.html.twig
@@ -6,8 +6,12 @@
 				<p><%if(data.content) {%><%=data.content%><%}%></p>
 			</div>
 			<div class="popup-buttons">
-				<input class="btn cancel js-ok" type="button" value="Да" />
-				<input class="btn js-cancel" type="button" value="Нет" />
+				<%if(data.type == 'alert') {%>
+					<input class="btn js-cancel" type="button" value="Закрыть" />
+				<%} else {%>
+					<input class="btn cancel js-ok" type="button" value="Да" />
+					<input class="btn js-cancel" type="button" value="Нет" />
+				<%}%>
 			</div>
 		</div>
 	</script>
