--- a/src/Acme/SecurityBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acme/SecurityBundle/Resources/views/Default/registration.html.twig
@@ -24,6 +24,7 @@
 			<p class="login-submit">
 				<button type="submit" class="login-button">Отправить</button>
 			</p>
+			<input type="hidden" name="process" value="1" />
 		</form>
     </div>
 {% endblock %}
