--- a/web/css/note.css
+++ b/web/css/note.css
@@ -174,8 +174,8 @@ table {
   background-image: -ms-linear-gradient(top, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0));
   background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0));
   background-image: linear-gradient(top, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0));
-  -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05), 0 2px #262a2e, 0 3px #1f2326, 0 4px 3px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05), 0 2px #262a2e, 0 3px #1f2326, 0 4px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
   display: -moz-inline-stack;
   /* FF2- */
 
@@ -188,7 +188,8 @@ table {
 
 }
 #header .container .nav li:active {
-  margin-top: 4px;
+  /*margin-top: 4px;*/
+
   height: 43px;
   color: #aaa;
   text-shadow: 0 1px black;
