--- a/helper/less/note-content.less
+++ b/helper/less/note-content.less
@@ -54,5 +54,18 @@
 		em {
 			font-style: italic;
 		}
+
+		p {
+			margin-bottom: 10px;
+			line-height: 150%;
+			word-break: break-all;
+		}
+
+		a {
+			color: #0e90d2;
+			&:hover {
+				text-decoration: none;
+			}
+		}
 	}
 }
