--- a/helper/less/forms.less
+++ b/helper/less/forms.less
@@ -1,18 +1,5 @@
-.dark_form {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 15px;
-	font-weight: 300;
-	color: #a8a7a8;
-	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
-
-	p {
-		margin: 0 0 10px;
-
-		input, button, label {
-			.box-sizing(border-box);
-		}
-
-		input {
+.dark_inputs {
+	input {
 			padding: 0 10px;
 			width: 300px;
 			height: 40px;
@@ -35,6 +22,23 @@
 			background: rgba(0, 0, 0, 0.1);
 			outline: 0;
 		}
+}
+
+.dark_form {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 15px;
+	font-weight: 300;
+	color: #a8a7a8;
+	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+
+	p {
+		margin: 0 0 10px;
+
+		input, button, label {
+			.box-sizing(border-box);
+		}
+
+		.dark_inputs;
 
 		label {
 			width: 100px;
@@ -165,6 +169,59 @@
 				height: 19px;
 				background: url("/img/arrow2.png") 0 0 no-repeat;
 			}
+		}
+	}
+}
+
+.profile_form_wrapper {
+	text-align: center;
+
+	.form-horizontal {
+		display: inline-block;
+		width: 625px;
+		text-align: left;
+		padding-top: 25px;
+		padding-left: 35px;
+
+		.title-block {
+			color: #a8a7a8;
+			text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+			padding-top: 40px;
+			padding-bottom: 5px;
+			font-weight: bold;
+			font-size: 14pt;
+			text-align: center;
+			margin-left: -35px;
+		}
+
+		.control-group {
+			padding-top: 20px;
+
+			.control-label {
+				color: #a8a7a8;
+				text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+				width: 150px;
+				line-height: 40px;
+				padding-right: 10px;
+				text-align: right;
+
+				.inline-block;
+			}
+
+			.help-block {
+				color: #a8a7a8;
+				text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+				padding-left: 165px;
+				padding-top: 5px;
+				font-size: 95%;
+			}
+
+			.dark_inputs;
+		}
+
+		.form-actions {
+			padding-left: 163px;
+			padding-top: 20px;
 		}
 	}
 }
