--- a/helper/less/control_panel.less
+++ b/helper/less/control_panel.less
@@ -76,6 +76,16 @@
 				}
 			}
 		}
+
+		.search-bar {
+			vertical-align: top;
+
+			div.wrap {
+				height: 43px;
+				display: inline-block;
+				padding: 17px 20px 0 20px;
+			}
+		}
 	}
 }
 
