--- a/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
@@ -17,6 +17,12 @@
 				<li><div class="wrap"><a class="cp-cut" href="#" title="Вырезать"></a></div></li>
 				<li><div class="wrap"><a class="cp-paste" href="#" title="Вставить"></a></div></li>
 				<li><div class="wrap"><a class="cp-delete" href="#" title="Удалить"></a></div></li>
+				<li class="search-bar">
+					<div class="wrap">
+						<input type="text" class="js-search" placeholder="Поиск" />
+						<input type="button" class="cp-search" value="искать" />
+					</div>
+				</li>
 			</ul>
 		</div>
 	</script>
