--- a/helper/less/control_panel.less
+++ b/helper/less/control_panel.less
@@ -6,85 +6,88 @@
 
 	.mix-gradient;
 
-	.controls {
-		font-size: 0;
+	.cp-wrapper{
 		background: url(../img/bg_control_panel.png);
-		border-left: 1px solid #e1e1e1;
-		border-top: 1px solid white;
+		position: relative;
+		height: 60px;
 
-		li {
-			border-right: 1px solid #e1e1e1;
-			border-left: 1px solid white;
-
-			.mix-gradient;
-
-			&:hover {
-				.mix-gradient(#eeeeee, #efefef, #f3f3f3, #f4f4f4);
-			}
-
-			&:active {
-				.mix-gradient(#eaeaea, #e9e9e9, #e6e6e6, #e5e5e5);
-			}
-
-			&:last-child {
-				box-shadow: 1px 0 0 0 white;
-				-moz-box-shadow: 1px 0 0 0 white;
-				-webkit-box-shadow: 1px 0 0 0 white;
-			}
+		.controls {
+			font-size: 0;
+			border-left: 1px solid #e1e1e1;
+			border-top: 1px solid white;
 
 			.inline-block;
 
-			.wrap {
-				background: url(../img/bg_control_panel.png);
+			li {
+				border-right: 1px solid #e1e1e1;
+				border-left: 1px solid white;
 
-				a {	
-					width: 80px;
-					height: 60px;
-					text-decoration: none;
-					color: black;
+				.mix-gradient;
 
-					.inline-block;
+				&:hover {
+					.mix-gradient(#eeeeee, #efefef, #f3f3f3, #f4f4f4);
+				}
 
-					&.cp-add-dir {
-						background: url(../img/icon_add_dir.png) no-repeat;
-						background-position: 16px 11px;
-					}
-					&.cp-add-note {
-						background: url(../img/icon_add_note.png) no-repeat;
-						background-position: 17px 17px;
-					}
-					&.cp-edit {
-						background: url(../img/icon_edit.png) no-repeat;
-						background-position: 17px 17px;
-					}
-					&.cp-copy {
-						background: url(../img/icon_copy.png) no-repeat;
-						background-position: 25px 16px;
-					}
-					&.cp-cut {
-						background: url(../img/icon_cut.png) no-repeat;
-						background-position: 23px 20px;
-					}
-					&.cp-paste {
-						background: url(../img/icon_paste.png) no-repeat;
-						background-position: 26px 14px;
-					}
-					&.cp-delete {
-						background: url(../img/icon_trash.png) no-repeat;
-						background-position: 27px 17px;
+				&:active {
+					.mix-gradient(#eaeaea, #e9e9e9, #e6e6e6, #e5e5e5);
+				}
+
+				&:last-child {
+					box-shadow: 1px 0 0 0 white;
+					-moz-box-shadow: 1px 0 0 0 white;
+					-webkit-box-shadow: 1px 0 0 0 white;
+				}
+
+				.inline-block;
+
+				.wrap {
+					background: url(../img/bg_control_panel.png);
+
+					a {	
+						width: 80px;
+						height: 60px;
+						text-decoration: none;
+						color: black;
+
+						.inline-block;
+
+						&.cp-add-dir {
+							background: url(../img/icon_add_dir.png) no-repeat;
+							background-position: 16px 11px;
+						}
+						&.cp-add-note {
+							background: url(../img/icon_add_note.png) no-repeat;
+							background-position: 17px 17px;
+						}
+						&.cp-edit {
+							background: url(../img/icon_edit.png) no-repeat;
+							background-position: 17px 17px;
+						}
+						&.cp-copy {
+							background: url(../img/icon_copy.png) no-repeat;
+							background-position: 25px 16px;
+						}
+						&.cp-cut {
+							background: url(../img/icon_cut.png) no-repeat;
+							background-position: 23px 20px;
+						}
+						&.cp-paste {
+							background: url(../img/icon_paste.png) no-repeat;
+							background-position: 26px 14px;
+						}
+						&.cp-delete {
+							background: url(../img/icon_trash.png) no-repeat;
+							background-position: 27px 17px;
+						}
 					}
 				}
 			}
 		}
 
-		.search-bar {
-			vertical-align: top;
-
-			div.wrap {
-				height: 43px;
-				display: inline-block;
-				padding: 17px 20px 0 20px;
-			}
+		.search-wrapper {
+			position: absolute;
+			top: 12px;
+			right: 25px;
 		}
 	}
 }
