--- a/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
@@ -1,29 +1,31 @@
 {%raw%}	
 	<script type="text/template" id="cpanel">		
 		<div class="control-panel">
-			<ul class="controls">
-				<li>
-					<div class="wrap">
-						<a class="cp-add-dir js-route" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_dir" title="Добавить раздел"></a>
+			<div class="cp-wrapper">
+				<ul class="controls">
+					<li>
+						<div class="wrap">
+							<a class="cp-add-dir js-route" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_dir" title="Добавить раздел"></a>
+						</div>
+					</li>
+					<li>
+						<div class="wrap">
+							<a class="cp-add-note js-route" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_note" title="Добавить запись"></a>
+						</div>
+					</li>
+					<li><div class="wrap"><a class="cp-edit js-route" href="#" title="Изменить"></a></div></li>
+					<li><div class="wrap"><a class="cp-copy" href="#" title="Копировать"></a></div></li>
+					<li><div class="wrap"><a class="cp-cut" href="#" title="Вырезать"></a></div></li>
+					<li><div class="wrap"><a class="cp-paste" href="#" title="Вставить"></a></div></li>
+					<li><div class="wrap"><a class="cp-delete" href="#" title="Удалить"></a></div></li>
+				</ul>
+				<div class="search-wrapper">
+					<div class="search-bar">
+						<input type="text" class="search-field js-search" placeholder="Поиск по записям" />
+						<input type="submit" class="search-button cp-search" value="Найти" />
 					</div>
-				</li>
-				<li>
-					<div class="wrap">
-						<a class="cp-add-note js-route" href="#<%if(model.cur_dir_id){%>dir/<%=model.cur_dir_id%>/<%}%>add_note" title="Добавить запись"></a>
-					</div>
-				</li>
-				<li><div class="wrap"><a class="cp-edit js-route" href="#" title="Изменить"></a></div></li>
-				<li><div class="wrap"><a class="cp-copy" href="#" title="Копировать"></a></div></li>
-				<li><div class="wrap"><a class="cp-cut" href="#" title="Вырезать"></a></div></li>
-				<li><div class="wrap"><a class="cp-paste" href="#" title="Вставить"></a></div></li>
-				<li><div class="wrap"><a class="cp-delete" href="#" title="Удалить"></a></div></li>
-				<li class="search-bar">
-					<div class="wrap">
-						<input type="text" class="js-search" placeholder="Поиск" />
-						<input type="button" class="cp-search" value="искать" />
-					</div>
-				</li>
-			</ul>
+				</div>
+			</div>
 		</div>
 	</script>
 {%endraw%}
