Перевод поиска на роуты

--- a/helper/less/forms.less
+++ b/helper/less/forms.less
@@ -256,6 +256,7 @@
 		margin: 0;
 		padding: 8px;
 		text-shadow: 0 1px 0 #dfedf4;
+		text-decoration: none;
 
 		.box-shadow(inset 0 1px 0 #dfedf4);
 		#gradient.vertical(#b0d2e3, #9abdcf);
