--- a/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Underscore/control_panel.html.twig
@@ -22,7 +22,7 @@
 				<div class="search-wrapper">
 					<div class="search-bar">
 						<input type="text" class="search-field js-search" placeholder="Поиск по записям" />
-						<input type="submit" class="search-button cp-search" value="Найти" />
+						<a href="#" class="search-button cp-search js-route">Найти</a>
 					</div>
 				</div>
 			</div>
