--- a/helper/less/forms.less
+++ b/helper/less/forms.less
@@ -242,6 +242,7 @@
 		padding: 8px 3px 8px 33px;
 		width: 165px;
 		outline: 0;
+		height: 17px;
 
 		.box-shadow(inset 0 1px 2px rgba(0,0,0,0.2));
 	}
@@ -257,16 +258,21 @@
 		padding: 8px;
 		text-shadow: 0 1px 0 #dfedf4;
 		text-decoration: none;
+		height: 17px;
+		vertical-align: top;
+		line-height: 1.2;
+		outline: none;
 
+		.inline-block;
 		.box-shadow(inset 0 1px 0 #dfedf4);
-		#gradient.vertical(#b0d2e3, #9abdcf);
+		#gradient.vertical(#c1dce9, #aecad8);
 
 		&:hover {
-			#gradient.vertical(#c1dce9, #aecad8);
+			#gradient.vertical(#cae1ec, #bbd3de);
 		}
 		
 		&:active {
-			#gradient.vertical(#aecad8, #c1dce9);
+			#gradient.vertical(#bbd3de, #cae1ec);
 		}
 	}
 }
